--- a/Projet2/launch.json
+++ b/Projet2/launch.json
@@ -35,6 +35,13 @@
             "request": "launch",
             "mainClass": "page_temps",
             "vmArgs": "--module-path \"C:/Users/lauri/Downloads/openjfx-23.0.1_windows-x64_bin-sdk/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Launch page_utilisateur",
+            "request": "launch",
+            "mainClass": "page_utilisateur",
+            "vmArgs": "--module-path \"C:/Users/lauri/Downloads/openjfx-23.0.1_windows-x64_bin-sdk/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
