--- a/Projet2/launch.json
+++ b/Projet2/launch.json
@@ -38,9 +38,9 @@
         },
         {
             "type": "java",
-            "name": "Launch page_utilisateur",
+            "name": "Launch page_gantt",
             "request": "launch",
-            "mainClass": "page_utilisateur",
+            "mainClass": "page_gantt",
             "vmArgs": "--module-path \"C:/Users/lauri/Downloads/openjfx-23.0.1_windows-x64_bin-sdk/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
         },
         {
